# valuecell

./: .env.example  .gitignore  README.ja.md  README.md  README.zh.md  README.zh_Hant.md  build.sh
.github/: CONTRIBUTING.md
.github/workflows/: mac_build.yml  win_build.yml
docs/: CONFIGURATION_GUIDE.md
frontend/: build.sh  package-lock.json  package.json  vite.config.ts
frontend/src/: global.css  root.tsx  routes.ts
frontend/src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend.rs  lib.rs  system.rs
frontend/src/api/: setting.ts  strategy.ts  system.ts
frontend/src/app/: redirect-to-home.tsx
frontend/src/constants/: agent.ts  api.ts  icons.ts  stock.ts
frontend/src/hooks/: use-debounce.ts  use-tauri-info.ts
frontend/src/lib/: agent-store.ts  api-client.ts  sse-client.ts  time.ts  tracker.ts  utils.ts
frontend/src/mock/: agent-data.tsx  strategy-data.ts
frontend/src/provider/: tracker-provider.tsx
frontend/src/store/: system-store.ts
frontend/src/types/: renderer.ts  strategy.ts  system.ts
python/: pyproject.toml
python/configs/: config.yaml
python/configs/agent_cards/: auto_trading_agent.json  strategy_agent.json
python/configs/agents/: auto_trading_agent.yaml  news_agent.yaml
python/configs/providers/: dashscope.yaml  openrouter.yaml  siliconflow.yaml
python/scripts/: launch.py
python/valuecell/config/: constants.py  loader.py
python/valuecell/server/: main.py
python/valuecell/utils/: db.py  i18n_utils.py  (+2 more)
(+159 files in other folders)
